--- a/content/mainpage/pro.html
+++ b/content/mainpage/pro.html
@@ -1,38 +1,36 @@
+
 <h1 style="color:#3e5389; margin-bottom: 2rem;">{{int:bs-mainpage-content-pagetitle-pro}}</h1>
-<div style="display: flex; justify-content: space-between; flex-wrap: wrap;">
-	<div class="col-md-6 col-sm-12 col-xs-12" style="text-align: center; padding-left: 10px; padding-right: 10px;">
-		<div style="background-color:#f0f0f0; margin: 0 0 1.5em 0; padding: 25px; min-height: calc(100% - 1.5em);">
-		  <div class="icon-bluespice-logo" style="font-size:45px; color: #c8c8c8; height: 80px; padding-top: 10px;"></div>
-		  <div style="color: #4d4d4d; font-size: 22px; font-weight:bold; padding-bottom: 15px;">{{int:bs-mainpage-content-tutorials-title}}</div>
-		  <div style="color: #4d4d4d; font-size: 16px; height: 3em; margin-bottom: 15px;">{{int:bs-mainpage-content-tutorials-text}}</div>
-		  <div style="color: #4d4d4d; font-size: 16px;">{{int:bs-mainpage-content-tutorials-links}}</div>
+
+<div class="portal-row cols-2" style="text-align: center; display: flex; flex-wrap: wrap; margin-left: -0.5em; margin-right: -0.5em; width: calc(100% + 1em);">
+	<div class="portal-box" style=" margin-left: 0.5em; margin-right: 0.5em; margin-bottom: 1em; background: #f1f3f9; border: 1px solid #e9e9ee; width: calc(50% - 1em);">
+		<div class="heading" style="display: block; width: 100%; padding: 1.25em 0.5em 0.5em 0.5em; font-size: 1.5rem; font-weight: 900;"><span class="icon-bluespice-logo" style="font-size: 1.5em; color: #3366cc;"></span><span style="color: #3366cc; padding-left: 0.6em; vertical-align: top">{{int:bs-mainpage-content-tutorials-title}}</span></div>
+		<div class="body" style="padding: 1em;">
+			<div style="min-height: 3em;">{{int:bs-mainpage-content-tutorials-text}}</div>
+			<div>{{int:bs-mainpage-content-tutorials-links}}</div>
 		</div>
-	  </div>
-	  <div class="col-md-6 col-sm-12 col-xs-12" style="text-align: center; padding-left: 10px; padding-right: 10px;">
-		<div style="background-color:#f0f0f0; margin: 0 0 1.5em 0; padding: 25px; min-height: calc(100% - 1.5em);">
-		  <div class="bs-icon-painting-roll" style="font-size:45px; color: #c8c8c8; height: 80px;"></div>
-		  <div style="color: #4d4d4d; font-size: 22px; font-weight:bold; padding-bottom: 15px;">{{int:bs-mainpage-content-flexiskin-title}}</div>
-		  <div style="color: #4d4d4d; font-size: 16px; height: 3em; margin-bottom: 15px;">{{int:bs-mainpage-content-flexiskin-text}}</div>
-		  <div style="color: #4d4d4d; font-size: 16px;">{{int:bs-mainpage-content-flexiskin-links}}</div>
+	</div>
+	<div class="portal-box" style=" margin-left: 0.5em; margin-right: 0.5em; margin-bottom: 1em; background: #f1f3f9; border: 1px solid #e9e9ee; width: calc(50% - 1em);">
+		<div class="heading" style="display: block; width: 100%; padding: 1.25em 0.5em 0.5em 0.5em; font-size: 1.5rem; font-weight: 900;"><span class="bs-icon-painting-roll" style="font-size: 1.1em; color: #3366cc;"></span><span style="color: #3366cc; padding-left: 0.6em; vertical-align: top">{{int:bs-mainpage-content-flexiskin-title}}</span></div>
+		<div class="body" style="padding: 1em;">
+			<div style="min-height: 3em;">{{int:bs-mainpage-content-flexiskin-text}}</div>
+			<div>{{int:bs-mainpage-content-flexiskin-links}}</div>
 		</div>
-	  </div>
 	</div>
-<div style="display: flex; justify-content: space-between; flex-wrap: wrap;">
-	<div class="col-md-6 col-xs-12" style="text-align: center; padding-left: 10px; padding-right: 10px;">
-	  <div style="background-color:#f0f0f0; margin: 0 0 1.5em 0; padding: 25px; min-height: calc(100% - 1.5em);">
-		<div class="icon-books" style="font-size:45px; color: #c8c8c8; height: 80px; padding-top: 10px;"></div>
-		<div style="color: #4d4d4d; font-size: 22px; font-weight:bold; padding-bottom: 15px;">{{int:bs-mainpage-content-helpdesk-title}}</div>
-		<div style="color: #4d4d4d; font-size: 16px; height: 3em; margin-bottom: 15px;">{{int:bs-mainpage-content-helpdesk-text}}</div>
-		<div style="color: #4d4d4d; font-size: 16px;">{{int:bs-mainpage-content-helpdesk-links}}</div>
-	  </div>
+</div>
+<div class="portal-row cols-2" style="text-align: center; display: flex; flex-wrap: wrap; margin-left: -0.5em; margin-right: -0.5em; width: calc(100% + 1em);">
+	<div class="portal-box" style=" margin-left: 0.5em; margin-right: 0.5em; margin-bottom: 1em; background: #f1f3f9; border: 1px solid #e9e9ee; width: calc(50% - 1em);">
+		<div class="heading" style="display: block; width: 100%; padding: 1.25em 0.5em 0.5em 0.5em; font-size: 1.5rem; font-weight: 900;"><span class="icon-books" style="font-size: 1.5em; color: #3366cc;"></span><span style="color: #3366cc; padding-left: 0.6em; vertical-align: top">{{int:bs-mainpage-content-helpdesk-title}}</span></div>
+		<div class="body" style="padding: 1em;">
+			<div style="min-height: 3em;">{{int:bs-mainpage-content-helpdesk-text}}</div>
+			<div>{{int:bs-mainpage-content-helpdesk-links}}</div>
+		</div>
 	</div>
-	<div class="col-md-6 col-xs-12" style="text-align: center; padding-left: 10px; padding-right: 10px;">
-	  <div style="background-color:#f0f0f0; margin: 0 0 1.5em 0; padding: 25px; min-height: calc(100% - 1.5em);">
-		<div class="bs-icon-talk" style="font-size:45px; color: #c8c8c8; height: 80px;"></div>
-		<div style="color: #4d4d4d; font-size: 22px; font-weight:bold; padding-bottom: 15px;">{{int:bs-mainpage-content-contact-title}}</div>
-		<div style="color: #4d4d4d; font-size: 16px; height: 3em; margin-bottom: 15px;">{{int:bs-mainpage-content-contact-text}}</div>
-		<div style="color: #4d4d4d; font-size: 16px;">{{int:bs-mainpage-content-contact-links}}</div>
-	  </div>
+	<div class="portal-box" style=" margin-left: 0.5em; margin-right: 0.5em; margin-bottom: 1em; background: #f1f3f9; border: 1px solid #e9e9ee; width: calc(50% - 1em);">
+		<div class="heading" style="display: block; width: 100%; padding: 1.25em 0.5em 0.5em 0.5em; font-size: 1.5rem; font-weight: 900;"><span class="bs-icon-talk" style="font-size: 1.1em; color: #3366cc;"></span><span style="color: #3366cc; padding-left: 0.6em; vertical-align: top">{{int:bs-mainpage-content-contact-title}}</span></div>
+		<div class="body" style="padding: 1em;">
+			<div style="min-height: 3em;">{{int:bs-mainpage-content-contact-text}}</div>
+			<div>{{int:bs-mainpage-content-contact-links}}</div>
+		</div>
 	</div>
 </div>
 __HIDE_TITLE__
